fixed broken css comment, added animation for piece to move.

--- a/thrive.css
+++ b/thrive.css
@@ -158,6 +158,7 @@
 }
 
 .possiblePieceToMove {
+    animation: pulse 1s infinite alternate;
     cursor: pointer;
 }
 
@@ -182,11 +183,20 @@
     background-color: lime;
     border-radius: 100%;
     box-shadow: 1px 2px olivedrab;
-    /* background-image: url('img/peg.png');
+    /* background-image: url('img/peg.png'); */
 }
 
 .possiblePeg {
 	background-color: green;
 	cursor: pointer;
+}
+
+@keyframes pulse {
+    0%{
+        box-shadow:0 0 1px #0ff
+    }
+    to{
+        box-shadow:0 0 2px 3px #0885c3
+    }
 }
 
